--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
   "require": {
     "protophp/pack": "^0.1",
     "react/socket": "^1.0",
+    "react/promise": "^2.0",
     "monolog/monolog": "^1.0",
     "evenement/evenement": "^3.0"
   },
