--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Proto\\Socket\\": "tests"
+      "Proto\\Socket\\Tests\\": "tests"
     }
   }
 }
